--- a/packages/frontend/@n8n/design-system/src/css/_primitives-io.scss
+++ b/packages/frontend/@n8n/design-system/src/css/_primitives-io.scss
@@ -4,231 +4,231 @@
 
 @mixin io-primitives {
 	// Gray
-	--h-gray: 220;
-	--p-gray-1900: #0b0b0d;
-	--p-gray-1800: #15171a;
-	--p-gray-1700: #202226;
-	--p-gray-1600: #2b2e33;
-	--p-gray-1500: #353940;
-	--p-gray-1400: #40444d;
-	--p-gray-1300: #4b5059;
-	--p-gray-1200: #555b66;
-	--p-gray-1100: #606673;
-	--p-gray-main: #6b7280;
-	--p-gray-900: #787f8e;
-	--p-gray-800: #878e9b;
-	--p-gray-700: #969ca7;
-	--p-gray-600: #acb1ba;
-	--p-gray-500: #b4b8c0;
-	--p-gray-400: #c3c6cd;
-	--p-gray-300: #d2d4d9;
-	--p-gray-200: #e8eaec;
-	--p-gray-100: #f0f3f5;
-	--p-gray-50: #f7f8f9;
+	--color--gray--h: 220;
+	--p--color--gray-1900: #0b0b0d;
+	--p--color--gray-1800: #15171a;
+	--p--color--gray-1700: #202226;
+	--p--color--gray-1600: #2b2e33;
+	--p--color--gray-1500: #353940;
+	--p--color--gray-1400: #40444d;
+	--p--color--gray-1300: #4b5059;
+	--p--color--gray-1200: #555b66;
+	--p--color--gray-1100: #606673;
+	--p--color--gray-main: #6b7280;
+	--p--color--gray-900: #787f8e;
+	--p--color--gray-800: #878e9b;
+	--p--color--gray-700: #969ca7;
+	--p--color--gray-600: #acb1ba;
+	--p--color--gray-500: #b4b8c0;
+	--p--color--gray-400: #c3c6cd;
+	--p--color--gray-300: #d2d4d9;
+	--p--color--gray-200: #e8eaec;
+	--p--color--gray-100: #f0f3f5;
+	--p--color--gray-50: #f7f8f9;
 
 	// Midnight Blue (Primary)
-	--p-midnight-1900: #0a1b3d;
-	--p-midnight-1800: #0c1d42;
-	--p-midnight-1700: #0e1f46;
-	--p-midnight-1600: #0f2048;
-	--p-midnight-1500: #0f2048;
-	--p-midnight-1400: #11224c;
-	--p-midnight-1300: #122450;
-	--p-midnight-1200: #132654;
-	--p-midnight-1100: #132858;
-	--p-midnight-main: #13285a;
-	--p-midnight-900: #1b3464;
-	--p-midnight-800: #41547f;
-	--p-midnight-700: #476083;
-	--p-midnight-600: #4b6486;
-	--p-midnight-500: #526b8c;
-	--p-midnight-400: #5b7798;
-	--p-midnight-300: #7a92ab;
-	--p-midnight-200: #a4b5c7;
-	--p-midnight-100: #e7ecf0;
-	--p-midnight-50: #f0f3f5;
+	--p--color--midnight-1900: #0a1b3d;
+	--p--color--midnight-1800: #0c1d42;
+	--p--color--midnight-1700: #0e1f46;
+	--p--color--midnight-1600: #0f2048;
+	--p--color--midnight-1500: #0f2048;
+	--p--color--midnight-1400: #11224c;
+	--p--color--midnight-1300: #122450;
+	--p--color--midnight-1200: #132654;
+	--p--color--midnight-1100: #132858;
+	--p--color--midnight-main: #13285a;
+	--p--color--midnight-900: #1b3464;
+	--p--color--midnight-800: #41547f;
+	--p--color--midnight-700: #476083;
+	--p--color--midnight-600: #4b6486;
+	--p--color--midnight-500: #526b8c;
+	--p--color--midnight-400: #5b7798;
+	--p--color--midnight-300: #7a92ab;
+	--p--color--midnight-200: #a4b5c7;
+	--p--color--midnight-100: #e7ecf0;
+	--p--color--midnight-50: #f0f3f5;
 
 	// Dark Blue (Secondary)
-	--p-darkblue-1900: #111e3c;
-	--p-darkblue-1800: #0c1d42;
-	--p-darkblue-1700: #0e1f46;
-	--p-darkblue-1600: #0f2048;
-	--p-darkblue-1500: #0a1023;
-	--p-darkblue-1400: #11224c;
-	--p-darkblue-1300: #122450;
-	--p-darkblue-1200: #132654;
-	--p-darkblue-1100: #132858;
-	--p-darkblue-main: #101b36;
-	--p-darkblue-900: #1f2e49;
-	--p-darkblue-800: #2c3248;
-	--p-darkblue-700: #476083;
-	--p-darkblue-600: #4b6486;
-	--p-darkblue-500: #526b8c;
-	--p-darkblue-400: #b6bbd1;
-	--p-darkblue-300: #7a92ab;
-	--p-darkblue-200: #a4b5c7;
-	--p-darkblue-100: #e7ecf0;
-	--p-darkblue-50: #f0f3f5;
+	--p--color--darkblue-1900: #111e3c;
+	--p--color--darkblue-1800: #0c1d42;
+	--p--color--darkblue-1700: #0e1f46;
+	--p--color--darkblue-1600: #0f2048;
+	--p--color--darkblue-1500: #0a1023;
+	--p--color--darkblue-1400: #11224c;
+	--p--color--darkblue-1300: #122450;
+	--p--color--darkblue-1200: #132654;
+	--p--color--darkblue-1100: #132858;
+	--p--color--darkblue-main: #101b36;
+	--p--color--darkblue-900: #1f2e49;
+	--p--color--darkblue-800: #2c3248;
+	--p--color--darkblue-700: #476083;
+	--p--color--darkblue-600: #4b6486;
+	--p--color--darkblue-500: #526b8c;
+	--p--color--darkblue-400: #b6bbd1;
+	--p--color--darkblue-300: #7a92ab;
+	--p--color--darkblue-200: #a4b5c7;
+	--p--color--darkblue-100: #e7ecf0;
+	--p--color--darkblue-50: #f0f3f5;
 
 	// Green (Success)
-	--p-green-1900: #112800;
-	--p-green-1800: #1d3e00;
-	--p-green-1700: #295500;
-	--p-green-1600: #356b00;
-	--p-green-1500: #418200;
-	--p-green-1400: #418500;
-	--p-green-1300: #428800;
-	--p-green-1200: #468c00;
-	--p-green-1100: #4a9500;
-	--p-green-main: #3f7e00;
-	--p-green-900: #66a82b;
-	--p-green-800: #74b533;
-	--p-green-700: #8eca5a;
-	--p-green-600: #a8d180;
-	--p-green-500: #a8d180;
-	--p-green-400: #b6dc99;
-	--p-green-300: #c4e2b3;
-	--p-green-200: #d9eccc;
-	--p-green-100: #eef6e6;
-	--p-green-50: #f7fdf4;
+	--p--color--green-1900: #112800;
+	--p--color--green-1800: #1d3e00;
+	--p--color--green-1700: #295500;
+	--p--color--green-1600: #356b00;
+	--p--color--green-1500: #418200;
+	--p--color--green-1400: #418500;
+	--p--color--green-1300: #428800;
+	--p--color--green-1200: #468c00;
+	--p--color--green-1100: #4a9500;
+	--p--color--green-main: #3f7e00;
+	--p--color--green-900: #66a82b;
+	--p--color--green-800: #74b533;
+	--p--color--green-700: #8eca5a;
+	--p--color--green-600: #a8d180;
+	--p--color--green-500: #a8d180;
+	--p--color--green-400: #b6dc99;
+	--p--color--green-300: #c4e2b3;
+	--p--color--green-200: #d9eccc;
+	--p--color--green-100: #eef6e6;
+	--p--color--green-50: #f7fdf4;
 
 	// Orange (Warning)
-	--p-orange-1900: #221006;
-	--p-orange-1800: #451f0d;
-	--p-orange-1700: #682f14;
-	--p-orange-1600: #8b3e1b;
-	--p-orange-1500: #ae4e22;
-	--p-orange-1400: #ae4e22;
-	--p-orange-1300: #b34c23;
-	--p-orange-1200: #b84924;
-	--p-orange-1100: #c85526;
-	--p-orange-main: #d9622b;
-	--p-orange-900: #dd7040;
-	--p-orange-800: #e18155;
-	--p-orange-700: #e69a75;
-	--p-orange-600: #ecb195;
-	--p-orange-500: #ecb195;
-	--p-orange-400: #f0c0aa;
-	--p-orange-300: #f3cfc0;
-	--p-orange-200: #f7dfd5;
-	--p-orange-100: #fbefea;
-	--p-orange-50: #fdf8f5;
+	--p--color--orange-1900: #221006;
+	--p--color--orange-1800: #451f0d;
+	--p--color--orange-1700: #682f14;
+	--p--color--orange-1600: #8b3e1b;
+	--p--color--orange-1500: #ae4e22;
+	--p--color--orange-1400: #ae4e22;
+	--p--color--orange-1300: #b34c23;
+	--p--color--orange-1200: #b84924;
+	--p--color--orange-1100: #c85526;
+	--p--color--orange-main: #d9622b;
+	--p--color--orange-900: #dd7040;
+	--p--color--orange-800: #e18155;
+	--p--color--orange-700: #e69a75;
+	--p--color--orange-600: #ecb195;
+	--p--color--orange-500: #ecb195;
+	--p--color--orange-400: #f0c0aa;
+	--p--color--orange-300: #f3cfc0;
+	--p--color--orange-200: #f7dfd5;
+	--p--color--orange-100: #fbefea;
+	--p--color--orange-50: #fdf8f5;
 
 	// Red (Error)
-	--p-red-1900: #200606;
-	--p-red-1800: #3e0b0b;
-	--p-red-1700: #5c1111;
-	--p-red-1600: #7a1717;
-	--p-red-1500: #981d1d;
-	--p-red-1400: #8e1d1d;
-	--p-red-1300: #941e1e;
-	--p-red-1200: #a21f1f;
-	--p-red-1100: #b02121;
-	--p-red-main: #be2424;
-	--p-red-900: #c53a3a;
-	--p-red-800: #cb5050;
-	--p-red-700: #d56f6f;
-	--p-red-600: #df9292;
-	--p-red-500: #df9292;
-	--p-red-400: #e4a5a5;
-	--p-red-300: #e9b8b8;
-	--p-red-200: #f1d1d1;
-	--p-red-100: #f9e9e9;
-	--p-red-50: #fdf5f5;
+	--p--color--red-1900: #200606;
+	--p--color--red-1800: #3e0b0b;
+	--p--color--red-1700: #5c1111;
+	--p--color--red-1600: #7a1717;
+	--p--color--red-1500: #981d1d;
+	--p--color--red-1400: #8e1d1d;
+	--p--color--red-1300: #941e1e;
+	--p--color--red-1200: #a21f1f;
+	--p--color--red-1100: #b02121;
+	--p--color--red-main: #be2424;
+	--p--color--red-900: #c53a3a;
+	--p--color--red-800: #cb5050;
+	--p--color--red-700: #d56f6f;
+	--p--color--red-600: #df9292;
+	--p--color--red-500: #df9292;
+	--p--color--red-400: #e4a5a5;
+	--p--color--red-300: #e9b8b8;
+	--p--color--red-200: #f1d1d1;
+	--p--color--red-100: #f9e9e9;
+	--p--color--red-50: #fdf5f5;
 
 	// Rose Bud Cherry (Accent Purple)
-	--p-purple-1900: #0e050a;
-	--p-purple-1800: #1d0a14;
-	--p-purple-1700: #2b0f1e;
-	--p-purple-1600: #3a1427;
-	--p-purple-1500: #481931;
-	--p-purple-1400: #571e3b;
-	--p-purple-1300: #652345;
-	--p-purple-1200: #74284f;
-	--p-purple-1100: #822c59;
-	--p-purple-main: #913263;
-	--p-purple-900: #a83973;
-	--p-purple-800: #be4383;
-	--p-purple-700: #c75a92;
-	--p-purple-600: #cf72a2;
-	--p-purple-500: #d789b1;
-	--p-purple-400: #dfa1c1;
-	--p-purple-300: #e7b8d0;
-	--p-purple-200: #efd0e0;
-	--p-purple-100: #f7e7ef;
-	--p-purple-50: #fbf3f7;
+	--p--color--purple-1900: #0e050a;
+	--p--color--purple-1800: #1d0a14;
+	--p--color--purple-1700: #2b0f1e;
+	--p--color--purple-1600: #3a1427;
+	--p--color--purple-1500: #481931;
+	--p--color--purple-1400: #571e3b;
+	--p--color--purple-1300: #652345;
+	--p--color--purple-1200: #74284f;
+	--p--color--purple-1100: #822c59;
+	--p--color--purple-main: #913263;
+	--p--color--purple-900: #a83973;
+	--p--color--purple-800: #be4383;
+	--p--color--purple-700: #c75a92;
+	--p--color--purple-600: #cf72a2;
+	--p--color--purple-500: #d789b1;
+	--p--color--purple-400: #dfa1c1;
+	--p--color--purple-300: #e7b8d0;
+	--p--color--purple-200: #efd0e0;
+	--p--color--purple-100: #f7e7ef;
+	--p--color--purple-50: #fbf3f7;
 
 	// Stale / Waikawa Grey (Info)
-	--p-stale-1900: #090c0f;
-	--p-stale-1800: #12181f;
-	--p-stale-1700: #1c242e;
-	--p-stale-1600: #25303d;
-	--p-stale-1500: #2e3c4d;
-	--p-stale-1400: #37485c;
-	--p-stale-1300: #40546b;
-	--p-stale-1200: #495f7a;
-	--p-stale-1100: #536b8a;
-	--p-stale-main: #5b7798;
-	--p-stale-900: #6a85a5;
-	--p-stale-800: #7a92af;
-	--p-stale-700: #8ba0b9;
-	--p-stale-600: #9cadc3;
-	--p-stale-500: #acbbcd;
-	--p-stale-400: #bdc9d7;
-	--p-stale-300: #cdd6e1;
-	--p-stale-200: #e6ebf0;
-	--p-stale-100: #f0f3f5;
-	--p-stale-50: #f7f8fa;
+	--p--color--stale-1900: #090c0f;
+	--p--color--stale-1800: #12181f;
+	--p--color--stale-1700: #1c242e;
+	--p--color--stale-1600: #25303d;
+	--p--color--stale-1500: #2e3c4d;
+	--p--color--stale-1400: #37485c;
+	--p--color--stale-1300: #40546b;
+	--p--color--stale-1200: #495f7a;
+	--p--color--stale-1100: #536b8a;
+	--p--color--stale-main: #5b7798;
+	--p--color--stale-900: #6a85a5;
+	--p--color--stale-800: #7a92af;
+	--p--color--stale-700: #8ba0b9;
+	--p--color--stale-600: #9cadc3;
+	--p--color--stale-500: #acbbcd;
+	--p--color--stale-400: #bdc9d7;
+	--p--color--stale-300: #cdd6e1;
+	--p--color--stale-200: #e6ebf0;
+	--p--color--stale-100: #f0f3f5;
+	--p--color--stale-50: #f7f8fa;
 
 	// Yellow (Accent Yellow)
-	--p-yellow-1900: #181400;
-	--p-yellow-1800: #302800;
-	--p-yellow-1700: #493c01;
-	--p-yellow-1600: #614f01;
-	--p-yellow-1500: #796301;
-	--p-yellow-1400: #917701;
-	--p-yellow-1300: #aa8b02;
-	--p-yellow-1200: #c29f02;
-	--p-yellow-1100: #dab302;
-	--p-yellow-main: #f1c502;
-	--p-yellow-900: #fdd213;
-	--p-yellow-800: #fdd72d;
-	--p-yellow-700: #fddc47;
-	--p-yellow-600: #fde161;
-	--p-yellow-500: #fee67c;
-	--p-yellow-400: #feeb96;
-	--p-yellow-300: #fef0b0;
-	--p-yellow-200: #fef5ca;
-	--p-yellow-100: #fffae5;
-	--p-yellow-50: #fffcf2;
+	--p--color--yellow-1900: #181400;
+	--p--color--yellow-1800: #302800;
+	--p--color--yellow-1700: #493c01;
+	--p--color--yellow-1600: #614f01;
+	--p--color--yellow-1500: #796301;
+	--p--color--yellow-1400: #917701;
+	--p--color--yellow-1300: #aa8b02;
+	--p--color--yellow-1200: #c29f02;
+	--p--color--yellow-1100: #dab302;
+	--p--color--yellow-main: #f1c502;
+	--p--color--yellow-900: #fdd213;
+	--p--color--yellow-800: #fdd72d;
+	--p--color--yellow-700: #fddc47;
+	--p--color--yellow-600: #fde161;
+	--p--color--yellow-500: #fee67c;
+	--p--color--yellow-400: #feeb96;
+	--p--color--yellow-300: #fef0b0;
+	--p--color--yellow-200: #fef5ca;
+	--p--color--yellow-100: #fffae5;
+	--p--color--yellow-50: #fffcf2;
 
 	/* Dark Gray (Neutral / Base for Dark Theme) */
 
-	--p-dark-gray-1900: #050505;
-	--p-dark-gray-1800: #0b0b0b;
-	--p-dark-gray-1700: #121212; /* Background */
-	--p-dark-gray-1600: #181818;
-	--p-dark-gray-1500: #1e1e1e; /* Cards & Icons Backgrounds */
-	--p-dark-gray-1400: #242424;
-	--p-dark-gray-1300: #2a2a2a;
-	--p-dark-gray-1200: #303030;
-	--p-dark-gray-1100: #3a3a3a;
-	--p-dark-gray-main: #4a4a4a; /* Main Neutral Tone */
-	--p-dark-gray-900: #5c5c5c;
-	--p-dark-gray-800: #707070;
-	--p-dark-gray-700: #858585;
-	--p-dark-gray-600: #9b9b9b;
-	--p-dark-gray-500: #b3b3b3; /* Text & Icons */
-	--p-dark-gray-400: #c2c2c2;
-	--p-dark-gray-300: #d0d0d0;
-	--p-dark-gray-200: #e0e0e0;
-	--p-dark-gray-100: #f0f0f0;
-	--p-dark-gray-50: #fafafa;
+	--p--color--dark-gray-1900: #050505;
+	--p--color--dark-gray-1800: #0b0b0b;
+	--p--color--dark-gray-1700: #121212; /* Background */
+	--p--color--dark-gray-1600: #181818;
+	--p--color--dark-gray-1500: #1e1e1e; /* Cards & Icons Backgrounds */
+	--p--color--dark-gray-1400: #242424;
+	--p--color--dark-gray-1300: #2a2a2a;
+	--p--color--dark-gray-1200: #303030;
+	--p--color--dark-gray-1100: #3a3a3a;
+	--p--color--dark-gray-main: #4a4a4a; /* Main Neutral Tone */
+	--p--color--dark-gray-900: #5c5c5c;
+	--p--color--dark-gray-800: #707070;
+	--p--color--dark-gray-700: #858585;
+	--p--color--dark-gray-600: #9b9b9b;
+	--p--color--dark-gray-500: #b3b3b3; /* Text & Icons */
+	--p--color--dark-gray-400: #c2c2c2;
+	--p--color--dark-gray-300: #d0d0d0;
+	--p--color--dark-gray-200: #e0e0e0;
+	--p--color--dark-gray-100: #f0f0f0;
+	--p--color--dark-gray-50: #fafafa;
 
 	// Base
-	--p-io-white: #fff;
-	--p-black: #000;
-	--p-transparent: transparent;
+	--p--color--io-white: #fff;
+	--p--color--black: #000;
+	--p--color--transparent: transparent;
 }
 
 :root {
