--- a/packages/frontend/@n8n/design-system/src/css/_tokens.dark.scss
+++ b/packages/frontend/@n8n/design-system/src/css/_tokens.dark.scss
@@ -5,11 +5,11 @@
 	--color--danger: var(--p--color--alt-h-310);
 
 	// Primary
-	--color-primary-shade-1: var(--p-color-primary-420);
-	--color-primary: var(--p-color-primary-120);
-	--color-primary-tint-1: var(--p-color-primary-120);
-	--color-primary-tint-2: var(--p-color-primary-070);
-	--color-primary-tint-3: var(--p-color-primary-030);
+	--color--primary--shade-1: var(--p--color--primary-420);
+	--color--primary: var(--p--color--primary-120);
+	--color--primary--tint-1: var(--p--color--primary-120);
+	--color--primary--tint-2: var(--p--color--primary-070);
+	--color--primary--tint-3: var(--p--color--primary-030);
 
 	// Text
 	--color--text--shade-1: var(--p--color--gray-040);
