--- a/packages/frontend/@n8n/design-system/src/css/_primitives.scss
+++ b/packages/frontend/@n8n/design-system/src/css/_primitives.scss
@@ -42,6 +42,7 @@
 	--color--gray-500: hsl(0, 0%, 51%);
 	--color--gray-600: hsl(0, 0%, 46%);
 	--color--gray-700: hsl(0, 0%, 30%);
+	--color--gray-750: hsl(0, 0%, 26%);
 	--color--gray-800: hsl(0, 0%, 24%);
 	--color--gray-850: hsl(0, 0%, 17%);
 	--color--gray-900: hsl(0, 0%, 13%);
