--- a/packages/frontend/@n8n/design-system/src/css/_tokens.new.scss
+++ b/packages/frontend/@n8n/design-system/src/css/_tokens.new.scss
@@ -1,63 +1,63 @@
-// Should be semantic
-// We should avoid semantic naming that can become counterintuitive in dark mode "light" and naming that can conflict in dark mode
-
 /* stylelint-disable */
 @mixin theme {
 	// Brand
-	--background--brand: color;
-	--background--brand--hover: color;
-	--background--brand--active: color;
-	--background--brand--focus: color;
-	--background--brand--disabled: color;
+	--background--brand: var(--color--orange-300);
+	--background--brand--hover: var(--color--orange-400);
+	--background--brand--active: var(--color--orange-500);
+	--background--brand--focus: var(--color--orange-400);
+	--background--brand--disabled: var(--color--gray-200);
 
-	// Secondary
-	--background--secondary: color;
-	--background--secondary--hover: color;
-	--background--secondary--active: color;
-	--background--secondary--focus: color;
-	--background--secondary--disabled: color;
+	// Surface
+	--background--surface: var(--color--gray-white);
+	--background--surface--hover: var(--color--gray-100);
+	--background--surface--active: var(--color--gray-125);
+	--background--surface--focus: var(--color--gray-100);
+	--background--surface--disabled: var(--color--gray-200);
 
-	// Default surface color, add more surface colors via components
-	--background--surface: color;
-	--background--surface--hover: color;
-	--background--surface--active: color;
-	--background--surface--focus: color;
-	--background--surface--disabled: color;
+	// Border
+	--border-color--subtle: var(--color--gray-100);
+	--border-color: var(--color--gray-200);
+	--border-color--strong: var(--color--gray-800);
 
-	// Border max 5
-	--border-color--subtle: color;
-	--border-color: color;
-	--border-color--strong: color;
-
-	// Border max 5
-	--icon-color--subtle: color;
-	--icon-color: color;
-	--icon-color--strong: color;
+	// Icon
+	--icon-color--subtle: var(--color--gray-200);
+	--icon-color: var(--color--gray-500);
+	--icon-color--strong: var(--color--gray-800);
 
 	// Text
-	--text-color: color;
-	--text-color--subtle: color;
-	--text-color--subtler: color;
+	--text-color: var(--color--gray-800);
+	--text-color--subtle: var(--color--gray-500);
+	--text-color--subtler: var(--color--gray-200);
 
-	// Feedback - Success
-	--background--success: color;
-	--border-color--success: color;
-	--text-color--success: color;
+	// Success
+	--background--success: var(--color--green-50);
+	--border-color--success: var(--color--green-200);
+	--text-color--success: var(--color--green-800);
+	--icon-color--success: var(--color--green-800);
 
-	// Feedback - Warning
-	--background--warning: color;
-	--border-color--warning: color;
-	--text-color--warning: color;
+	// Warning
+	--background--warning: var(--color--yellow-100);
+	--border-color--warning: var(--color--yellow-200);
+	--text-color--warning: var(--color--yellow-800);
+	--icon-color--warning: var(--color--yellow-800);
 
-	// Feedback - Danger
-	--background--danger: color;
-	--border-color--danger: color;
-	--text-color--danger: color;
+	// Danger
+	--background--danger: var(--color--red-50);
+	--border-color--danger: var(--color--red-200);
+	--text-color--danger: var(--color--red-800);
+	--icon-color--danger: var(--color--red-800);
 
-	// Feedback - Info
-	--background--info: color;
-	--border-color--info: color;
-	--text-color--info: color;
+	// Info
+	--background--info: var(--color--blue-50);
+	--border-color--info: var(--color--blue-200);
+	--text-color--info: var(--color--blue-800);
+	--icon-color--info: var(--color--blue-800);
+
+	// Inverse
+	--background--inverse: var(--color--gray-900);
+	--border-color--inverse: var(--color--gray-700);
+	--text-color--inverse: var(--color--gray-100);
+	--icon-color--inverse: var(--color--gray-100);
 }
 
 :root {
