--- a/packages/frontend/@n8n/design-system/src/css/_tokens.dark.scss
+++ b/packages/frontend/@n8n/design-system/src/css/_tokens.dark.scss
@@ -72,7 +72,7 @@
 	--canvas--color--background--h: 0;
 	--canvas--color--background--s: 0%;
 	--canvas--color--background--l: 9%;
-	--canvas--dot--color: var(--color--gray-600-alpha-100);
+	--canvas--dot--color: var(--color--gray-600);
 	--canvas--read-only-line--color: var(--color--gray-900);
 	--canvas--color--selected: var(--color--white-alpha-400);
 	--canvas--color--selected-transparent: var(--canvas--color--selected);
