--- a/packages/frontend/@n8n/design-system/src/css/_tokens.dark.scss
+++ b/packages/frontend/@n8n/design-system/src/css/_tokens.dark.scss
@@ -219,7 +219,7 @@
 	--button--color--background--highlight--hover: var(--color--gray-700);
 	--button--color--background--highlight--active-focus: var(--color--gray-700);
 	--button--outline-color--highlight--focus: var(--color--gray-700);
-	--button--color--text--highlight--disabled: var(--color--white-gray-600);
+	--button--color--text--highlight--disabled: var(--color--gray-600);
 	--button--border-color--highlight--disabled: transparent;
 
 	// Button success, warning, danger
