--- a/packages/frontend/@n8n/design-system/src/css/_primitives.scss
+++ b/packages/frontend/@n8n/design-system/src/css/_primitives.scss
@@ -27,27 +27,27 @@
 	--color--black-alpha-900: hsl(220, 1%, 0%, 0.95);
 
 	// Gray
-	--color--gray-white: hsl(0, 0%, 100%);
-	--color--gray-50: hsl(0, 0%, 99%);
-	--color--gray-100: hsl(0, 0%, 97.5%);
-	--color--gray-125: hsl(0, 0%, 96%);
-	--color--gray-150: hsl(0, 0%, 93%);
-	--color--gray-200: hsl(0, 0%, 88%);
-	--color--gray-250: hsl(0, 0%, 80%);
-	--color--gray-300: hsl(0, 0%, 68%);
-	--color--gray-400: hsl(0, 0%, 58%);
-	--color--gray-500: hsl(0, 0%, 51%);
-	--color--gray-600: hsl(0, 0%, 46%);
-	--color--gray-700: hsl(0, 0%, 30%);
-	--color--gray-750: hsl(0, 0%, 26%);
-	--color--gray-800: hsl(0, 0%, 24%);
-	--color--gray-850: hsl(0, 0%, 17%);
-	--color--gray-900: hsl(0, 0%, 13%);
-	--color--gray-950: hsl(0, 0%, 9%);
-	--color--gray-black: hsl(0, 0%, 0%);
-	--color--gray-150-alpha-100: hsla(0, 0%, 93%, 0.1);
-	--color--gray-300-alpha-100: hsla(0, 0%, 68%, 0.1);
-	--color--gray-800-alpha-100: hsla(0, 0%, 24%, 0.1);
+	--color--neutral-white: hsl(0, 0%, 100%);
+	--color--neutral-50: hsl(0, 0%, 99%);
+	--color--neutral-100: hsl(0, 0%, 97.5%);
+	--color--neutral-125: hsl(0, 0%, 96%);
+	--color--neutral-150: hsl(0, 0%, 93%);
+	--color--neutral-200: hsl(0, 0%, 88%);
+	--color--neutral-250: hsl(0, 0%, 80%);
+	--color--neutral-300: hsl(0, 0%, 68%);
+	--color--neutral-400: hsl(0, 0%, 58%);
+	--color--neutral-500: hsl(0, 0%, 51%);
+	--color--neutral-600: hsl(0, 0%, 46%);
+	--color--neutral-700: hsl(0, 0%, 30%);
+	--color--neutral-750: hsl(0, 0%, 26%);
+	--color--neutral-800: hsl(0, 0%, 24%);
+	--color--neutral-850: hsl(0, 0%, 17%);
+	--color--neutral-900: hsl(0, 0%, 13%);
+	--color--neutral-950: hsl(0, 0%, 9%);
+	--color--neutral-black: hsl(0, 0%, 0%);
+	--color--neutral-150-alpha-100: hsla(0, 0%, 93%, 0.1);
+	--color--neutral-300-alpha-100: hsla(0, 0%, 68%, 0.1);
+	--color--neutral-800-alpha-100: hsla(0, 0%, 24%, 0.1);
 
 	// Orange
 	--color--orange-50: hsl(7, 100%, 98%);
