--- a/packages/frontend/@n8n/design-system/src/css/_tokens.dark.scss
+++ b/packages/frontend/@n8n/design-system/src/css/_tokens.dark.scss
@@ -5,27 +5,27 @@
 	--color--danger: var(--color--red-400);
 
 	// Text
-	--color--text--shade-1: var(--color--gray-125);
-	--color--text: var(--color--gray-250);
-	--color--text--tint-1: var(--color--gray-300);
-	--color--text--tint-2: var(--color--gray-600);
-	--color--text--tint-3: var(--color--gray-800);
+	--color--text--shade-1: var(--color--neutral-125);
+	--color--text: var(--color--neutral-250);
+	--color--text--tint-1: var(--color--neutral-300);
+	--color--text--tint-2: var(--color--neutral-600);
+	--color--text--tint-3: var(--color--neutral-800);
 	--color--text--danger: var(--color--red-400);
 
 	// Foreground
-	--color--foreground--shade-2: var(--color--gray-250);
-	--color--foreground--shade-1: var(--color--gray-400);
-	--color--foreground: var(--color--gray-750);
-	--color--foreground--tint-1: var(--color--gray-850);
-	--color--foreground--tint-2: var(--color--gray-950);
+	--color--foreground--shade-2: var(--color--neutral-250);
+	--color--foreground--shade-1: var(--color--neutral-400);
+	--color--foreground: var(--color--neutral-750);
+	--color--foreground--tint-1: var(--color--neutral-850);
+	--color--foreground--tint-2: var(--color--neutral-950);
 
 	// Background
-	--color--background--shade-2: var(--color--gray-150);
-	--color--background--shade-1: var(--color--gray-600);
-	--color--background: var(--color--gray-700);
-	--color--background--light-1: var(--color--gray-850);
-	--color--background--light-2: var(--color--gray-950);
-	--color--background--light-3: var(--color--gray-900);
+	--color--background--shade-2: var(--color--neutral-150);
+	--color--background--shade-1: var(--color--neutral-600);
+	--color--background: var(--color--neutral-700);
+	--color--background--light-1: var(--color--neutral-850);
+	--color--background--light-2: var(--color--neutral-950);
+	--color--background--light-3: var(--color--neutral-900);
 
 	--shadow: 0 2px 4px rgba(0, 0, 0, 0.2), 0 0 6px rgba(0, 0, 0, 0.1);
 	--shadow--dark: 0 2px 4px rgba(0, 0, 0, 0.2), 0 0 6px rgba(0, 0, 0, 0.2);
@@ -61,19 +61,19 @@
 	);
 
 	// LangChain
-	--lm-chat--messages--color--background: var(--color--gray-950);
-	--lm-chat--bot--color--background: var(--color--gray-850);
-	--lm-chat--bot--border-color: var(--color--gray-500);
+	--lm-chat--messages--color--background: var(--color--neutral-950);
+	--lm-chat--bot--color--background: var(--color--neutral-850);
+	--lm-chat--bot--border-color: var(--color--neutral-500);
 	--lm-chat--user--color--background: var(--color--green-700);
 	--lm-chat--user--border-color: var(--color--green-600);
 
 	// Canvas
-	--canvas--color--background: var(--color--gray-950);
+	--canvas--color--background: var(--color--neutral-950);
 	--canvas--color--background--h: 0;
 	--canvas--color--background--s: 0%;
 	--canvas--color--background--l: 9%;
-	--canvas--dot--color: var(--color--gray-600);
-	--canvas--read-only-line--color: var(--color--gray-900);
+	--canvas--dot--color: var(--color--neutral-600);
+	--canvas--read-only-line--color: var(--color--neutral-900);
 	--canvas--color--selected: var(--color--white-alpha-400);
 	--canvas--color--selected-transparent: var(--canvas--color--selected);
 	--canvas--label--color--background: hsla(
@@ -84,18 +84,18 @@
 	);
 
 	// Nodes
-	--node--color--background: var(--color--gray-850);
-	--node--color--background--executing: var(--color--gray-700);
-	--node--color--background--executing-1: var(--color--gray-700);
+	--node--color--background: var(--color--neutral-850);
+	--node--color--background--executing: var(--color--neutral-700);
+	--node--color--background--executing-1: var(--color--neutral-700);
 	--node--border-color--pinned: var(--color--purple-500);
-	--node--type-main--color: var(--color--gray-400);
+	--node--type-main--color: var(--color--neutral-400);
 
 	// Sticky
 	--sticky--color--background: var(--color--yellow-800);
 	--sticky--border-color: var(--color--yellow-700);
-	--sticky--color--text: var(--color--gray-125);
+	--sticky--color--text: var(--color--neutral-125);
 	--sticky--code--color--text: var(--color--purple-300);
-	--sticky--code--color--background: var(--color--gray-150-alpha-100);
+	--sticky--code--color--background: var(--color--neutral-150-alpha-100);
 
 	--sticky--color--background--variant-1: var(--color--yellow-800);
 	--sticky--border-color--variant-1: var(--color--yellow-700);
@@ -109,12 +109,12 @@
 	--sticky--border-color--variant-5: var(--color--blue-700);
 	--sticky--color--background--variant-6: var(--color--purple-900);
 	--sticky--border-color--variant-6: var(--color--purple-700);
-	--sticky--color--background--variant-7: var(--color--gray-850);
-	--sticky--border-color--variant-7: var(--color--gray-700);
+	--sticky--color--background--variant-7: var(--color--neutral-850);
+	--sticky--border-color--variant-7: var(--color--neutral-700);
 
 	// NodeIcon
-	--node--icon--color--gray: var(--color--gray-200);
-	--node--icon--color--black: var(--color--gray-50);
+	--node--icon--color--neutral: var(--color--neutral-200);
+	--node--icon--color--black: var(--color--neutral-50);
 	--node--icon--color--blue: #898fff;
 	--node--icon--color--light-blue: #58abff;
 	--node--icon--color--dark-blue: #7ba7ff;
@@ -133,14 +133,14 @@
 	--expression-editor--resolvable--color--foreground--invalid: var(--color--red-300);
 	--expression-editor--resolvable--color--background--invalid: var(--color--red-alpha-020);
 	--expression-editor--resolvable--color--foreground--pending: var(--color--text);
-	--expression-editor--resolvable--color--background--pending: var(--color--gray-150-alpha-100);
-	--expression-editor--color--background: var(--color--gray-900);
-	--expression-editor--modal--color--background: var(--color--gray-900);
-	--expression-editor--syntax-example--color: var(--color--gray-700);
+	--expression-editor--resolvable--color--background--pending: var(--color--neutral-150-alpha-100);
+	--expression-editor--color--background: var(--color--neutral-900);
+	--expression-editor--modal--color--background: var(--color--neutral-900);
+	--expression-editor--syntax-example--color: var(--color--neutral-700);
 	--autocomplete--item--color--selected: var(--color--purple-400);
-	--autocomplete--section-header--border-color: var(--color--gray-600);
-	--autocomplete--infobox--color--background: var(--color--gray-900);
-	--autocomplete--infobox--examples--border-color: var(--color--gray-700);
+	--autocomplete--section-header--border-color: var(--color--neutral-600);
+	--autocomplete--infobox--color--background: var(--color--neutral-900);
+	--autocomplete--infobox--examples--border-color: var(--color--neutral-700);
 
 	// Code
 	--code-tags--string--color: #9ecbff;
@@ -163,30 +163,30 @@
 	--json--number--color: var(--color--green-600);
 	--json--string--color: var(--color--purple-400);
 	--json--key--color: var(--color--text--shade-1);
-	--json--brackets--color: var(--color--gray-700);
+	--json--brackets--color: var(--color--neutral-700);
 	--json--brackets--color--hover: var(--color--blue-400);
-	--json--line--color: var(--color--gray-250);
+	--json--line--color: var(--color--neutral-250);
 	--json--highlight--color: var(--color--background);
-	--code--color--background: var(--color--gray-950);
-	--code--color--background--readonly: var(--color--gray-850);
-	--code--line-highlight--color: var(--color--gray-300-alpha-100);
-	--code--color--foreground: var(--color--gray-150);
-	--code--caret--color: var(--color--gray-50);
+	--code--color--background: var(--color--neutral-950);
+	--code--color--background--readonly: var(--color--neutral-850);
+	--code--line-highlight--color: var(--color--neutral-300-alpha-100);
+	--code--color--foreground: var(--color--neutral-150);
+	--code--caret--color: var(--color--neutral-50);
 	--code--selection--color: #3392ff44;
 	--code--selection--color--highlight: #17e5e633;
-	--code--gutter--color--background: var(--color--gray-950);
-	--code--gutter--color--foreground: var(--color--gray-300);
-	--code--gutter--color--foreground--active: var(--color--gray-50);
-	--code--indentation-marker--color: var(--color--gray-850);
-	--code--indentation-marker--color--active: var(--color--gray-700);
-	--line-break--color: var(--color--gray-400);
+	--code--gutter--color--background: var(--color--neutral-950);
+	--code--gutter--color--foreground: var(--color--neutral-300);
+	--code--gutter--color--foreground--active: var(--color--neutral-50);
+	--code--indentation-marker--color: var(--color--neutral-850);
+	--code--indentation-marker--color--active: var(--color--neutral-700);
+	--line-break--color: var(--color--neutral-400);
 	--code--line-break--color: var(--color--purple-500);
 
 	// Tag
-	--tag--color--background: var(--color--gray-700);
-	--tag--color--background--hover: var(--color--gray-600);
-	--tag--border-color: var(--color--gray-800);
-	--tag--border-color--hover: var(--color--gray-700);
+	--tag--color--background: var(--color--neutral-700);
+	--tag--color--background--hover: var(--color--neutral-600);
+	--tag--border-color: var(--color--neutral-800);
+	--tag--border-color--hover: var(--color--neutral-700);
 	--tag--color--text: var(--color--text--shade-1);
 
 	// Variables
@@ -200,7 +200,7 @@
 	--button--color--background--primary--disabled: var(--color--orange-alpha-500);
 
 	// Button secondary
-	--button--color--text--secondary: var(--color--gray-150);
+	--button--color--text--secondary: var(--color--neutral-150);
 	--button--border-color--secondary: var(--color--foreground);
 	--button--color--background--secondary: var(--color--background--light-2);
 	--button--color--text--secondary--hover-active-focus: var(--color--orange-250);
@@ -211,19 +211,19 @@
 	--button--border-color--secondary--disabled: var(--color--foreground);
 
 	// Button highlight
-	--button--color--text--highlight: var(--color--gray-300);
+	--button--color--text--highlight: var(--color--neutral-300);
 	--button--border-color--highlight: transparent;
 	--button--color--background--highlight: transparent;
 	--button--color--text--highlight--hover-active-focus: var(--color--orange-400);
-	--button--border-color--highlight--hover-active-focus: var(--color--gray-700);
-	--button--color--background--highlight--hover: var(--color--gray-700);
-	--button--color--background--highlight--active-focus: var(--color--gray-700);
-	--button--outline-color--highlight--focus: var(--color--gray-700);
-	--button--color--text--highlight--disabled: var(--color--gray-600);
+	--button--border-color--highlight--hover-active-focus: var(--color--neutral-700);
+	--button--color--background--highlight--hover: var(--color--neutral-700);
+	--button--color--background--highlight--active-focus: var(--color--neutral-700);
+	--button--outline-color--highlight--focus: var(--color--neutral-700);
+	--button--color--text--highlight--disabled: var(--color--neutral-600);
 	--button--border-color--highlight--disabled: transparent;
 
 	// Button success, warning, danger
-	--button--color--text--danger: var(--color--gray-white);
+	--button--color--text--danger: var(--color--neutral-white);
 	--button--border-color--danger: transparent;
 	--button--outline-color--danger--focus: var(--color--red-300);
 	--button--color--text--danger--disabled: var(--color--white-alpha-400);
@@ -231,7 +231,7 @@
 	--button--color--background--danger--disabled: var(--color--red-alpha-020);
 
 	// Text button
-	--text-button--color--text--secondary: var(--color--gray-300);
+	--text-button--color--text--secondary: var(--color--neutral-300);
 
 	// Node Creator Button
 	--node-creator--button--color--text: var(--button--color--text--secondary);
@@ -242,14 +242,14 @@
 	--node-creator--button--color--background: var(--color--orange-alpha-100);
 
 	// Table
-	--table--header--color--background: var(--color--gray-850);
-	--table--row--color--background: var(--color--gray-950);
-	--table--row--color--background--even: var(--color--gray-900);
-	--table--row--color--background--hover: var(--color--gray-850);
+	--table--header--color--background: var(--color--neutral-850);
+	--table--row--color--background: var(--color--neutral-950);
+	--table--row--color--background--even: var(--color--neutral-900);
+	--table--row--color--background--hover: var(--color--neutral-850);
 	--table--row--color--background--highlight: var(--color--warning--tint-1);
 
 	// Notification
-	--notification--color--background: var(--color--gray-850);
+	--notification--color--background: var(--color--neutral-850);
 
 	// Execution
 	--execution-card--color--background: var(--color--foreground--tint-1);
@@ -260,58 +260,58 @@
 	--execution-card--color--text--waiting: var(--color--purple-500);
 
 	// NDV
-	--run-data--color--background: var(--color--gray-900);
-	--ndvv2--run-data--color--background: var(--color--gray-900);
+	--run-data--color--background: var(--color--neutral-900);
+	--ndvv2--run-data--color--background: var(--color--neutral-900);
 	--ndv--droppable-parameter--color: var(--color--orange-300);
 	--ndv--droppable-parameter--color--background: var(--color--orange-alpha-100);
 	--ndv--droppable-parameter--color--background--active: var(--color--green-alpha-100);
-	--ndv--back--color--text: var(--color--gray-white);
+	--ndv--back--color--text: var(--color--neutral-white);
 
 	// Notice
 	--notice--border-color--warning: var(--color--gold-200);
 	--notice--color--background--warning: var(--color--gold-alpha-020);
-	--notice--color--text: var(--color--gray-white);
+	--notice--color--text: var(--color--neutral-white);
 
 	// Callout
-	--callout--border-color--info: var(--color--gray-700);
-	--callout--color--background--info: var(--color--gray-850);
-	--callout--color--text--info: var(--color--gray-white);
+	--callout--border-color--info: var(--color--neutral-700);
+	--callout--color--background--info: var(--color--neutral-850);
+	--callout--color--text--info: var(--color--neutral-white);
 	--callout--border-color--success: var(--color--success);
 	--callout--color--background--success: var(--color--green-900);
-	--callout--color--text--success: var(--color--gray-white);
+	--callout--color--text--success: var(--color--neutral-white);
 	--callout--border-color--warning: var(--color--warning);
 	--callout--color--background--warning: var(--color--gold-800);
-	--callout--color--text--warning: var(--color--gray-white);
+	--callout--color--text--warning: var(--color--neutral-white);
 	--callout--border-color--danger: var(--color--danger);
 	--callout--color--background--danger: var(--color--red-900);
-	--callout--color--text--danger: var(--color--gray-white);
+	--callout--color--text--danger: var(--color--neutral-white);
 	--callout--icon-color--danger: var(--color--danger);
 	--callout--border-color--secondary: var(--color--secondary);
 	--callout--color--background--secondary: var(--color--purple-alpha-200);
-	--callout--color--text--secondary: var(--color--gray-white);
+	--callout--color--text--secondary: var(--color--neutral-white);
 
 	// Dialogs and overlays
-	--dialog--color--background: var(--color--gray-900);
+	--dialog--color--background: var(--color--neutral-900);
 	--dialog--overlay--color--background: var(--color--slate-alpha-700);
 	--dialog--overlay--color--background--dark: var(--color--slate-alpha-700);
 
 	// Avatar
-	--avatar--color--text: var(--color--gray-white);
+	--avatar--color--text: var(--color--neutral-white);
 
 	// NPS Survey
-	--nps-survey--color--background: var(--color--gray-850);
-	--nps-survey--color--text: var(--color--gray-white);
+	--nps-survey--color--background: var(--color--neutral-850);
+	--nps-survey--color--text: var(--color--neutral-white);
 
 	// Switch (Activation, boolean)
-	--switch--color--background: var(--color--gray-950);
-	--switch--border-color: var(--color--gray-700);
-	--switch--toggle--color: var(--color--gray-125);
+	--switch--color--background: var(--color--neutral-950);
+	--switch--border-color: var(--color--neutral-700);
+	--switch--toggle--color: var(--color--neutral-125);
 
 	// Action Dropdown
 	--action-dropdown--item--color--background--active: var(--color--background--light-3);
 
 	// Input Triple
-	--input-triple--color--background: var(--color--gray-900);
+	--input-triple--color--background: var(--color--neutral-900);
 
 	// Node error
 	--node--error-output--color--text: var(--color--danger);
@@ -505,8 +505,8 @@
 	--diff--color--deleted--faint: #4d3e3d;
 
 	// Various
-	--color--info--tint-1: var(--color--gray-400);
-	--color--info--tint-2: var(--color--gray-850);
+	--color--info--tint-1: var(--color--neutral-400);
+	--color--info--tint-2: var(--color--neutral-850);
 	--border-color: var(--color--foreground);
 	--border-color--light: var(--color--foreground--tint-1);
 	--border: var(--border-width) var(--border-style) var(--color--foreground);
@@ -523,9 +523,9 @@
 	--icon--color: var(--color--text--tint-1);
 	--icon--color--hover: var(--color--orange-300);
 
-	--menu--color--background: var(--color--gray-850);
-	--menu--color--background--hover: var(--color--gray-700);
-	--menu--color--background--active: var(--color--gray-700);
+	--menu--color--background: var(--color--neutral-850);
+	--menu--color--background--hover: var(--color--neutral-700);
+	--menu--color--background--active: var(--color--neutral-700);
 
 	/* Ag Grid */
 	--grid--row--color--background--selected: var(--color--purple-900);
