--- a/packages/frontend/editor-ui/src/n8n-theme.scss
+++ b/packages/frontend/editor-ui/src/n8n-theme.scss
@@ -4,9 +4,9 @@
 
 :root {
 	// Using native css variable enables us to use this value in JS
-	--header-height: 65;
+	--header--height: 65;
 	--content-container-width: 1280px;
-	--banner-height: 48px;
+	--banner--height: 48px;
 }
 
 .clickable {
