--- a/packages/frontend/@n8n/design-system/src/css/_tokens.dark.new.scss
+++ b/packages/frontend/@n8n/design-system/src/css/_tokens.dark.new.scss
@@ -69,5 +69,6 @@ body[data-theme='dark'] {
 @media (prefers-color-scheme: dark) {
 	body:not([data-theme]) {
 		@include theme;
+		color-scheme: dark;
 	}
 }
