editor: Improve model browser and pull real metadata
Signed-off-by: Oleg Ivaniv <me@olegivaniv.com>

--- a/packages/frontend/editor-ui/src/features/ndv/parameters/components/ResourceLocator/resourceLocator.scss
+++ b/packages/frontend/editor-ui/src/features/ndv/parameters/components/ResourceLocator/resourceLocator.scss
@@ -1,5 +1,10 @@
 $--mode-selector-width: 92px;
 
+.modeSelectorWrapper {
+	margin-bottom: var(--spacing--2xs);
+	width: 100%;
+}
+
 .modeSelector {
 	--input--color--background: initial;
 	--input--color--text: initial;
